--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Official Website of Boozer's Brew & a Cafe Too" />
+  <meta name="description" content="Official Website of Boozer's Brew & a Cafe Too, LLC" />
+
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.1.2/css/all.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
